# kitten-detector

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
cli/: README.md  main.c
cmake/: FindDeepstreamAppCommon.cmake  FindGStreamer.cmake  FindJsonGlib.cmake  FindKittenDetector.cmake  FindNVDS.cmake
configs/infer-engine/: pgie_config.txt
configs/tracker/: config_tracker_NvDCF_accuracy.yml
include/: pipeline.h
notebooks/object-detection/: README.md  train_yolo_v4_coco.ipynb
src/: pipeline.c  pipeline.h
src/handlers/: handlers.c  handlers.h
src/inference/: inference.c  inference.h
src/metadata/: metadata.c  metadata.h
src/muxer/: muxer.c  muxer.h
src/probes/: probes.c  probes.h  timestamps.c  timestamps.h
src/recorder/: recorder.c  recorder.h
src/sinks/: sinks.c  sinks.h
src/sources/: decoders.c  decoders.h  sources.c  sources.h
src/structures/: structures.c  structures.h
src/utils/: utils.c  utils.h
